Fernando Lopez-Lezcano
Romain Moret
Florian Faber
Michael Voigt
Torben Hohn  
Paul Davis
Peter L Jones
Devin Anderson
Josh Green
Mario Lang
Arnold Krille
Jan Engelhardt
Adrian Knoth
David Garcia Garzon
Valerio Pilo

---------------------------
  Jackdmp changes log
---------------------------

2011-03-09 Stephane Letz  <letz@grame.fr>

	* jack_client_has_session_callback implementation.

2011-03-08 Stephane Letz  <letz@grame.fr>

	* Use of latency range in all backends.
	* ComputeTotalLatencies now a client/server call.
	* Add latent test client for latency API.
	* Also print playback and capture latency in jack_lsp.

2011-03-04 Stephane Letz  <letz@grame.fr>

	* Revert r4119 (RT notification in the server). JackAudioDriver::ProcessSync now skip backend write in case of graph process failure.
	* Fix incorrect error codes in alsa/usx2y.c and alsa/JackAlsaDriver.cpp.
	* Synchronize public headers with JACK1. Update OSX project.
	* New latency API implementation (in progress).

2011-02-09 Stephane Letz  <letz@grame.fr>

	* Remove JackPortIsActive flag.

2011-02-07 Stephane Letz  <letz@grame.fr>

	* Valerio Pilo second CAS for ARMv7 patch.

2011-02-03 Stephane Letz  <letz@grame.fr>

	* Valerio Pilo CAS for ARMv7 patch.

2011-01-11 Stephane Letz  <letz@grame.fr>

	* Adrian Knoth jack_lsp patch.

2010-11-17 Stephane Letz  <letz@grame.fr>

	* ALSA backend : suspend/resume handling (jack1 r4075).
	* Correct dummy driver.

2010-11-05 Stephane Letz  <letz@grame.fr>

	* In jackdmp.cpp, jackctl_setup_signals moved before jackctl_server_start. 
	* Correct symbols export in backends on OSX.

2010-11-03 Stephane Letz  <letz@grame.fr>

	* Improve backend error handling: fatal error returned by Read/Write now cause a Process failure (so a thread exit for blocking backends). Recoverable ones (XRuns..) are now treated internally in ALSA, FreeBob and FFADO backends.

2010-10-30 Stephane Letz  <letz@grame.fr>
